Made links invisible, fixed bugs

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ ol {
    margin: 0;
    padding: 0;
    width: 60%;
+   height: 250px;
  }
 
  ol li {
@@ -55,6 +56,7 @@ ol {
 
  ol li:hover i {
    opacity: 1;
+
  }
 
 
@@ -121,15 +123,26 @@ input {
 
 }
 
-
+/*    -webkit-transition: opacity .2s;
+   transition: opacity .2s;
+   opacity: 0;
+   display: block;
+   cursor: grab;
+   color: #c00;
+   top: 3px;
+   right: 10px;
+   position: absolute;
+   font-style: normal; */
 a {
-    color: #0060B6;
+    color: transparent;
     text-decoration: none;
+    position: absolute;
+    -webkit-transition: opacity .2s;
+    transition: opacity .2s;
 }
 
 a:hover
 {
-     color:#00A0C6;
      text-decoration:none;
-     cursor:pointer;
+     cursor: pointer;
 }
